# gnosispay-cli

./: .env.example  Cargo.toml  Dockerfile  README.md  entrypoint.sh
k8s/: deploy.sh  pod.yaml  restart.sh
src/: args.rs  error.rs  gnosispay.rs  gnosisscan.rs  main.rs  monerium.rs  monitor.rs  notify.rs  transactions.rs
