[package]
name = "gnosispay-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
colored = "3.0.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
alloy = { version = "0.12.6", features = ["full"] }
chrono = "0.4.40"
futures-util = "0.3.31"
